--- a/repos/odin-recipes/styles.css
+++ b/repos/odin-recipes/styles.css
@@ -1,20 +1,22 @@
-* {
-    box-sizing: border-box;
-    background-color:beige;
-   }
- * {
-
-    margin: 20px auto;
-    padding: 0;
-   }
+body{
+    background-color:bisque;
+}
+.container{
+    max-width: 1400px;
+    display:flex;
+}
+.recipe-links {
+    margin:auto;
+}
  h1 {
-    font-family: "Papyrus", serif ;
+    font-family: "Papyrus", fantasy;
     text-align: center;  
-    color:rgb(144, 68, 14);
-    
+    color:rgb(124, 61, 15);
+    font-weight: 900;
+    border-bottom: 2px solid rgb(99, 47, 10);
  }
  a {
-     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+     font-family: "Papyrus" ,fantasy;
      color:rgb(144, 68, 14);
      margin: 0.5em;
      padding: 10px;
@@ -23,10 +25,32 @@
  }
  ul {
     text-align: center;
-    
+    display: flex;
+    gap: 0.5rem;
+    padding: 0;
  }
  
 img {
-    border-radius: 0,5em;
-    border: 3px solid rgb(110, 54, 15);
+    filter: brightness(70%);
+    object-fit: cover;
+    width: 300px;
+    height: 300px;
+    transition:all 0.6s ease-in-out;
+}
+img:hover {transform: scale(1.3);
+}
+li {
+    display: inline;
+    position:relative;
+    overflow: hidden;
+}
+p {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: rgb(231, 238, 238);
+    font-size: 30px;
+    font-weight: bold;
+    text-decoration: none;
+    transform: translate(-50%,-75%);
 }
